several modifications and dev work

--- a/src/main/resources/templates/wedding.html
+++ b/src/main/resources/templates/wedding.html
@@ -411,7 +411,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-sm-4">
-                        <p>© 2021 Emeka Momodu - All Rights Reserved.</p>
+                        <p>© 2021 Emeka Momodu</p>
                     </div>
                     <div class="col-md-4 col-sm-4 text-center">
                         <div class="gla_social_btns">
