--- a/src/main/resources/templates/registry.html
+++ b/src/main/resources/templates/registry.html
@@ -63,11 +63,17 @@
 			<div class="items-container" id="items"></div>
 			<!-- container for js inject cart items content -->
 
+			<form action="#" th:action="@{/paystack}" method="post" class="cart-form" id="cart-form" th:object="${paymentInfo}" target="_blank" rel="noopener noreferrer">
+
 			<div class="cart-delivery" id="cart-delivery">
-				<h4 class="section-heading">Delivery</h4>
+				<h4 class="section-heading"></h4>
+				<div class="input-group">
+					<label for="email">Email*</label>
+					<input class="form-control" type="email" placeholder="Please Enter Email" id="email" name="email" th:field="*{email}" >
+				</div>
 				<div class="custom-radio">
-					<input id="radio1" type="radio" name="delivery" value="0.00" checked disabled>
-					<label for="radio1">delivery (N0)</label>
+					<input id="radio1" name="delivery" value="0.00" checked type="radio" hidden>
+<!--					<label for="radio1" hidden >delivery (N0)</label>-->
 				</div>
 
 <!--				<div class="custom-radio">-->
@@ -88,18 +94,22 @@
 				<h4 class="section-heading">Thank You <span class="ti-face-smile icon"></span></h4>
 			</div>
 
-			<form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="cart-form" id="cart-form">
+<!--			<button type="button" name="button" class="btn btn-default btn-lg" onclick="payWithPaystack()">-->
+<!--				paystack checkout <span class="ti-arrow-right"></span>-->
+<!--			</button>-->
+
+
 				<!-- Identify your business so that you can collect the payments. -->
 				<input type="hidden" name="business" value="yourpaypal@email.com">
 				<!-- Specify a Buy Now button. -->
 				<input type="hidden" name="cmd" value="_xclick">
 				<!-- Specify details about the item that buyers will purchase. -->
 				<input type="hidden" name="item_name" value="Bestshop shop - checkout">
-				<input type="hidden" name="amount" id="amount" value="">
+				<input type="hidden" name="amount" id="amount" value="" th:field="*{amount}">
 				<input type="hidden" name="currency_code" value="USD">
 				<!-- Display the payment button. -->
 				<button type="submit" name="submit" class="btn btn-default btn-lg">
-				pay pal checkout <span class="ti-arrow-right"></span>
+					paystack checkout <span class="ti-arrow-right"></span>
 				</button>
 			</form>
 		</div>
@@ -516,7 +526,7 @@
 
 				   <div class="col-md-12 col-sm-12">
 						<div class="footer-copyright">
-							 <p>© 2021 Emeka Momodu - All Rights Reserved.</p>
+							 <p>© 2021 Emeka Momodu</p>
 						</div>
 				   </div>
 				   
