--- a/src/main/resources/templates/registry.html
+++ b/src/main/resources/templates/registry.html
@@ -37,7 +37,7 @@
 					<span class="icon-bar"></span>
 				</button>
 				
-				<a class="navbar-brand" href="#"> <img src="" alt="AEUnion" /> </a>
+				<a class="navbar-brand" href="#"> <img  th:src="@{/img/AE-test-3.png}" alt="AEUnion" /> </a>
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav">
