home background added

--- a/src/main/resources/templates/wedding.html
+++ b/src/main/resources/templates/wedding.html
@@ -138,7 +138,7 @@
 
 
     <!-- Slider -->
-    <div class="gla_slider gla_image_bck  gla_wht_txt gla_fixed"  data-image="http://placehold.it/1400x800" data-stellar-background-ratio="0.2">
+    <div class="gla_slider gla_image_bck  gla_wht_txt gla_fixed" data-image="/home-background.jpeg" data-stellar-background-ratio="0.2">
 
         <!-- Over -->
         <div class="gla_over" data-color="#000" data-opacity="0.3"></div>
