--- a/src/main/resources/templates/wedding.html
+++ b/src/main/resources/templates/wedding.html
@@ -195,7 +195,7 @@
 
 
         <!-- section -->
-        <section class="gla_section gla_image_bck gla_fixed" id="about" data-stellar-background-ratio="0.2" data-image="http://placehold.it/1400x800">
+        <section class="gla_section gla_image_bck gla_fixed" id="about" data-stellar-background-ratio="0.2" data-image="/rsz_1rsz_1about-background-2.jpeg">
             
             
             <div class="container">
@@ -213,7 +213,7 @@
                         </div>
                         
                     </div>
-                    <div class="col-md-6 gla_image_bck" data-image="http://placehold.it/1400x800">
+                    <div class="col-md-6 gla_image_bck" data-image="/rsz_1dr-ada-1.jpeg">
                         
                     </div>
                     <div class="col-md-6 col-md-push-6 gla_image_bck" data-color="#eee">
