--- a/src/main/resources/templates/wedding.html
+++ b/src/main/resources/templates/wedding.html
@@ -213,7 +213,7 @@
                         </div>
                         
                     </div>
-                    <div class="col-md-6 gla_image_bck" data-image="/rsz_1dr-ada-1.jpeg">
+                    <div class="col-md-6 gla_image_bck" data-image="/rsz_rsz_1dr-ada-2.jpeg">
                         
                     </div>
                     <div class="col-md-6 col-md-push-6 gla_image_bck" data-color="#eee">
@@ -229,7 +229,7 @@
                         </div>
                         
                     </div>
-                    <div class="col-md-6 col-md-pull-6 gla_image_bck" data-image="http://placehold.it/1400x800">
+                    <div class="col-md-6 col-md-pull-6 gla_image_bck" data-image="/rsz_emeodi-ada1.jpeg">
                         
                     </div>
                 </div>
@@ -243,7 +243,7 @@
 
 
         <!-- section -->
-        <section class="gla_section gla_image_bck gla_fixed gla_wht_txt" id="countdown" data-stellar-background-ratio="0.2" data-image="http://placehold.it/1400x800">
+        <section class="gla_section gla_image_bck gla_fixed gla_wht_txt" id="countdown" data-stellar-background-ratio="0.2" data-image="/440px-Holy_Cross_Cathedral_Lagos.jpeg">
             
             <!-- Over -->
             <div class="gla_over" data-color="#000" data-opacity="0.7"></div>
@@ -271,7 +271,7 @@
 <!--                <p>Our ceremony and reception will be held at the Bell Event Center. Located at Campbell Street, Lagos Island.</p>-->
                 <div class="row text-center">
                     <div class="col-md-6 gla_round_block">
-                        <div class="gla_round_im gla_image_bck" data-image="http://placehold.it/600x600"></div>
+                        <div class="gla_round_im gla_image_bck" data-image="/hcc4.jpeg"></div>
                         <h3>The Wedding Mass</h3>
                         <p>10:00AM - 12:00PM<br>
                         Holy Cross Cathedral,<br>
@@ -280,7 +280,7 @@
                         <a href="#" class="btn">View Map</a>
                     </div>
                     <div class="col-md-6 gla_round_block">
-                        <div class="gla_round_im gla_image_bck" data-image="http://placehold.it/600x600"></div>
+                        <div class="gla_round_im gla_image_bck" data-image="/bell-event.jpeg"></div>
                         <h3>The Reception</h3>
                         <p>1:00 PM – 6:00PM<br>
                         The Bell Event Center,<br>
