--- a/src/main/resources/templates/wedding.html
+++ b/src/main/resources/templates/wedding.html
@@ -277,16 +277,16 @@
                         Holy Cross Cathedral,<br>
                         Campbell Street,<br>
                         Lagos Island.</p>
-                        <a href="#" class="btn">View Map</a>
+                        <a href="https://goo.gl/maps/xQ2DTbFMa2wyqStV8" class="btn" target="_blank" rel="noopener noreferrer">View Map</a>
                     </div>
-                    <div class="col-md-6 gla_round_block">
+                     <div class="col-md-6 gla_round_block">
                         <div class="gla_round_im gla_image_bck" data-image="/bell-event.jpeg"></div>
                         <h3>The Reception</h3>
                         <p>1:00 PM – 6:00PM<br>
                         The Bell Event Center,<br>
                         Campbell Street,<br>
                         Lagos Island.<br></p>
-                        <a href="#" class="btn">View Map</a>
+                        <a href="https://goo.gl/maps/1cks4JUjK66NbqtE9" class="btn" target="_blank" rel="noopener noreferrer">View Map</a>
                     </div>
 <!--                    <div class="col-md-4 gla_round_block">-->
 <!--                        <div class="gla_round_im gla_image_bck" data-image="http://placehold.it/600x600"></div>-->
