background registry added

--- a/src/main/resources/templates/wedding.html
+++ b/src/main/resources/templates/wedding.html
@@ -309,7 +309,7 @@
 
 
         <!-- section -->
-        <section class="gla_section gla_image_bck gla_wht_txt gla_fixed" data-stellar-background-ratio="0.2" id="registry" data-image="http://placehold.it/1400x800">
+        <section class="gla_section gla_image_bck gla_wht_txt gla_fixed" data-stellar-background-ratio="0.2" id="registry" data-image="/rsz_registry-aeunion-back.jpeg">
 
             <!-- Over -->
             <div class="gla_over" data-color="#000" data-opacity="0.7"></div>
