wedding party memeber - emeka added

--- a/src/main/resources/templates/wedding.html
+++ b/src/main/resources/templates/wedding.html
@@ -400,7 +400,7 @@
 
                 <div class="row text-center">
                     <div class="col-md-3 gla_round_block">
-                        <div class="gla_round_im gla_image_bck" data-image="http://placehold.it/600x600"></div>
+                        <div class="gla_round_im gla_image_bck" data-image="rsz_emeka1.jpeg"></div>
                         <h4>Emeka Momodu</h4>
                     </div>
                     <div class="col-md-3 gla_round_block">
