menu drop down rework for mobile view

--- a/src/main/resources/templates/wedding.html
+++ b/src/main/resources/templates/wedding.html
@@ -78,9 +78,9 @@
                 </div>
 
                 <!-- Menu Content -->
-                <div class="gla_main_menu_content gla_image_bck" data-color="rgba(0,0,0,0.9)" data-image="http://placehold.it/1400x800">
+                <div class="gla_main_menu_content gla_image_bck" data-color="rgba(0,0,0,0.5)" data-image="">
                     <!-- Over -->
-                    <div class="gla_over" data-color="#000" data-opacity="0.7"></div>
+                    <div class="gla_over" data-color="#000" data-opacity="0"></div>
                 </div>
 
                 <div class="gla_main_menu_content_menu gla_wht_txt text-right">
