wedding party first batch

--- a/src/main/resources/templates/wedding.html
+++ b/src/main/resources/templates/wedding.html
@@ -400,38 +400,75 @@
 
                 <div class="row text-center">
                     <div class="col-md-3 gla_round_block">
-                        <div class="gla_round_im gla_image_bck" data-image="rsz_emeka1.jpeg"></div>
+                        <div class="gla_round_im gla_image_bck" data-image="rsz_1rsz_1rsz_1cbm-omoarelojie_.jpeg"></div>
+                        <h4>Omoarelojie Momodu</h4>
+                    </div>
+                    <div class="col-md-3 gla_round_block">
+                        <div class="gla_round_im gla_image_bck" data-image="bright-1.jpeg"></div>
+                        <h4>Bright Okoro</h4>
+                    </div>
+                    <div class="col-md-3 gla_round_block">
+                        <div class="gla_round_im gla_image_bck" data-image="rsz_akachukwu_ojiekwe.jpeg"></div>
+                        <h4>Akachukwu Ojiekwe</h4>
+                    </div>
+                    <div class="col-md-3 gla_round_block">
+                        <div class="gla_round_im gla_image_bck" data-image="rsz_mekus-lala.jpeg"></div>
                         <h4>Emeka Momodu</h4>
                     </div>
                     <div class="col-md-3 gla_round_block">
-                        <div class="gla_round_im gla_image_bck" data-image="http://placehold.it/600x600"></div>
-                        <h4>Omo Momodu</h4>
+                        <div class="gla_round_im gla_image_bck" data-image="rsz_anita_anele.jpeg"></div>
+                        <h4>Anita Anele</h4>
                     </div>
                     <div class="col-md-3 gla_round_block">
-                        <div class="gla_round_im gla_image_bck" data-image="http://placehold.it/600x600"></div>
+                        <div class="gla_round_im gla_image_bck" data-image="rsz_img_2860.jpeg"></div>
                         <h4>Michael Momodu</h4>
                     </div>
                     <div class="col-md-3 gla_round_block">
-                        <div class="gla_round_im gla_image_bck" data-image="http://placehold.it/600x600"></div>
-                        <h4>John Pitterson</h4>
+                        <div class="gla_round_im gla_image_bck" data-image="rsz_awele_okeke.jpeg"></div>
+                        <h4>Awele Okeke</h4>
+                    </div>
+                    <div class="col-md-3 gla_round_block">
+                        <div class="gla_round_im gla_image_bck" data-image="chima1.jpeg"></div>
+                        <h4>Chima Ugbor</h4>
                     </div>
 
+
+
+
+
                     <div class="col-md-3 gla_round_block">
-                        <div class="gla_round_im gla_image_bck" data-image="http://placehold.it/600x600"></div>
-                        <h4>Katy Auzmann</h4>
+                        <div class="gla_round_im gla_image_bck" data-image=""></div>
+                        <h4>xxxx</h4>
                     </div>
                     <div class="col-md-3 gla_round_block">
-                        <div class="gla_round_im gla_image_bck" data-image="http://placehold.it/600x600"></div>
-                        <h4>Mark Donald</h4>
+                        <div class="gla_round_im gla_image_bck" data-image=""></div>
+                        <h4>xxxx</h4>
                     </div>
                     <div class="col-md-3 gla_round_block">
-                        <div class="gla_round_im gla_image_bck" data-image="http://placehold.it/600x600"></div>
-                        <h4>Ann Willson</h4>
+                        <div class="gla_round_im gla_image_bck" data-image=""></div>
+                        <h4>xxxx</h4>
                     </div>
                     <div class="col-md-3 gla_round_block">
-                        <div class="gla_round_im gla_image_bck" data-image="http://placehold.it/600x600"></div>
-                        <h4>Dominic Shilz</h4>
+                        <div class="gla_round_im gla_image_bck" data-image=""></div>
+                        <h4>xxxx</h4>
                     </div>
+                    <div class="col-md-3 gla_round_block">
+                        <div class="gla_round_im gla_image_bck" data-image=""></div>
+                        <h4>xxxx</h4>
+                    </div>
+                    <div class="col-md-3 gla_round_block">
+                        <div class="gla_round_im gla_image_bck" data-image=""></div>
+                        <h4>xxxx</h4>
+                    </div>
+                    <div class="col-md-3 gla_round_block">
+                        <div class="gla_round_im gla_image_bck" data-image=""></div>
+                        <h4>xxxx</h4>
+                    </div>
+                    <div class="col-md-3 gla_round_block">
+                        <div class="gla_round_im gla_image_bck" data-image=""></div>
+                        <h4>xxxx</h4>
+                    </div>
+
                 </div>
 
 
