bridal party - stream II

--- a/src/main/resources/templates/wedding.html
+++ b/src/main/resources/templates/wedding.html
@@ -431,42 +431,37 @@
                         <div class="gla_round_im gla_image_bck" data-image="chima1.jpeg"></div>
                         <h4>Chima Ugbor</h4>
                     </div>
-
-
-
-
-
                     <div class="col-md-3 gla_round_block">
-                        <div class="gla_round_im gla_image_bck" data-image=""></div>
-                        <h4>xxxx</h4>
+                        <div class="gla_round_im gla_image_bck" data-image="rsz_benedicta_nwankwo.jpeg"></div>
+                        <h4>Benedicta Nwankwo</h4>
                     </div>
                     <div class="col-md-3 gla_round_block">
-                        <div class="gla_round_im gla_image_bck" data-image=""></div>
-                        <h4>xxxx</h4>
+                        <div class="gla_round_im gla_image_bck" data-image="john-awoniyi.jpeg"></div>
+                        <h4>John Awoniyi</h4>
                     </div>
                     <div class="col-md-3 gla_round_block">
-                        <div class="gla_round_im gla_image_bck" data-image=""></div>
-                        <h4>xxxx</h4>
+                        <div class="gla_round_im gla_image_bck" data-image="rsz_chidinma_mbonu.jpeg"></div>
+                        <h4>Chidinma Mbonu</h4>
                     </div>
                     <div class="col-md-3 gla_round_block">
-                        <div class="gla_round_im gla_image_bck" data-image=""></div>
-                        <h4>xxxx</h4>
+                        <div class="gla_round_im gla_image_bck" data-image="seye-1.jpeg"></div>
+                        <h4>Seye</h4>
                     </div>
                     <div class="col-md-3 gla_round_block">
-                        <div class="gla_round_im gla_image_bck" data-image=""></div>
-                        <h4>xxxx</h4>
+                        <div class="gla_round_im gla_image_bck" data-image="rsz_chimezie_obasi.jpeg"></div>
+                        <h4>Chimezie Obasi</h4>
                     </div>
                     <div class="col-md-3 gla_round_block">
-                        <div class="gla_round_im gla_image_bck" data-image=""></div>
-                        <h4>xxxx</h4>
+                        <div class="gla_round_im gla_image_bck" data-image="ona-emmanuel.jpeg"></div>
+                        <h4>Onah Emmanuel</h4>
                     </div>
                     <div class="col-md-3 gla_round_block">
-                        <div class="gla_round_im gla_image_bck" data-image=""></div>
-                        <h4>xxxx</h4>
+                        <div class="gla_round_im gla_image_bck" data-image="rsz_chinonye_nwanna.jpeg"></div>
+                        <h4>Chinonye Nwanna</h4>
                     </div>
                     <div class="col-md-3 gla_round_block">
-                        <div class="gla_round_im gla_image_bck" data-image=""></div>
-                        <h4>xxxx</h4>
+                        <div class="gla_round_im gla_image_bck" data-image="rsz_david-ugwuozor.jpeg"></div>
+                        <h4>David Ugwuozor</h4>
                     </div>
 
                 </div>
