--- a/src/main/resources/templates/wedding.html
+++ b/src/main/resources/templates/wedding.html
@@ -57,7 +57,7 @@
             <div class="container">
 
                 <div class="gla_logo_container clearfix">
-                    <img th:src="@{/img/AE-test-3.png}" alt="" class="gla_logo_rev">
+                    <img th:src="@{/img/AE-test-3.png}" alt="" class="">
                     <div class="gla_logo_txt">
                         <!-- Logo -->
                         <a href="/" class="gla_logo">Adaorah & Emeodi</a>
