--- a/src/main/resources/templates/wedding.html
+++ b/src/main/resources/templates/wedding.html
@@ -445,7 +445,7 @@
                     </div>
                     <div class="col-md-3 gla_round_block">
                         <div class="gla_round_im gla_image_bck" data-image="seye-1.jpeg"></div>
-                        <h4>Seye</h4>
+                        <h4>Seye Popoola</h4>
                     </div>
                     <div class="col-md-3 gla_round_block">
                         <div class="gla_round_im gla_image_bck" data-image="rsz_chimezie_obasi.jpeg"></div>
