wedding party complete

--- a/src/main/resources/templates/wedding.html
+++ b/src/main/resources/templates/wedding.html
@@ -464,6 +464,28 @@
                         <h4>David Ugwuozor</h4>
                     </div>
 
+
+                    <div class="col-md-3 gla_round_block">
+                        <div class="gla_round_im gla_image_bck" data-image="rsz_ezinne_orijuide.jpeg"></div>
+                        <h4>Ezinne Orijuide</h4>
+                    </div>
+                    <div class="col-md-3 gla_round_block">
+                        <div class="gla_round_im gla_image_bck" data-image="rsz_halima_sambo.jpeg"></div>
+                        <h4>Halima Sambo</h4>
+                    </div>
+                    <div class="col-md-3 gla_round_block">
+                        <div class="gla_round_im gla_image_bck" data-image="rsz_onyinyechi_ebegbulem_.jpeg"></div>
+                        <h4>Onyinyechi Ebegbulem</h4>
+                    </div>
+                    <div class="col-md-3 gla_round_block">
+                        <div class="gla_round_im gla_image_bck" data-image="rsz_oyinlola_thomas.jpeg"></div>
+                        <h4>Oyinlola Thomas</h4>
+                    </div>
+                    <div class="col-md-3 gla_round_block">
+                        <div class="gla_round_im gla_image_bck" data-image="rsz_precious_kenkwo.jpeg"></div>
+                        <h4>Precious Kenkwo</h4>
+                    </div>
+
                 </div>
 
 
