--- a/src/main/resources/templates/paystack_checkout.html
+++ b/src/main/resources/templates/paystack_checkout.html
@@ -7,7 +7,12 @@
 
 
     <!-- Favicon -->
-    <link rel="icon" th:href="@{/img/favicon.ico}" type="image/x-icon">
+<!--    <link rel="icon" th:href="@{/img/favicon.ico}" type="image/x-icon">-->
+
+    <link rel="apple-touch-icon" sizes="180x180" th:href="@{/img/apple-touch-icon.png}">
+    <link rel="icon" type="image/png" sizes="32x32" th:href="@{/img/favicon-32x32.png}">
+    <link rel="icon" type="image/png" sizes="16x16" th:href="@{/img/favicon-16x16.png}">
+    <link rel="manifest" th:href="@{/img/site.webmanifest}">
 
     <!-- Library CSS -->
     <link rel="stylesheet" th:href="@{/css/glanz_library.css}">
