--- a/src/main/resources/templates/registry.html
+++ b/src/main/resources/templates/registry.html
@@ -11,7 +11,12 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <!--	<link href="img/favicon.png" rel="icon" type="image/png">-->
     <!-- Favicon -->
-    <link rel="icon" th:href="@{/img/favicon.ico}" type="image/x-icon">
+<!--    <link rel="icon" th:href="@{/img/favicon.ico}" type="image/x-icon">-->
+
+    <link rel="apple-touch-icon" sizes="180x180" th:href="@{/img/apple-touch-icon.png}">
+    <link rel="icon" type="image/png" sizes="32x32" th:href="@{/img/favicon-32x32.png}">
+    <link rel="icon" type="image/png" sizes="16x16" th:href="@{/img/favicon-16x16.png}">
+    <link rel="manifest" th:href="@{/img/site.webmanifest}">
 
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
 
