added Ada's bio

--- a/src/main/resources/templates/wedding.html
+++ b/src/main/resources/templates/wedding.html
@@ -208,12 +208,20 @@
                     <div class="col-md-6 gla_image_bck" data-color="#eee">
                         <div class="gla_simple_block">
                             <h2>Adaorah Francisca</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio mollitia, ipsa accusamus eius. Aspernatur ab sed minima, doloremque eligendi voluptatibus repellat unde, facilis natus ex ipsum eius atque suscipit fugit.</p>
+                            <p style="text-align: justify; text-justify: inter-word;">
+                                Adaorah Momodu is a digital health specialist and an early career medical researcher.
+                                She is Co-founder and COO at Oncopadi Technologies Limited. She holds a MBBS (Bachelor of Medicine; Bachelor of Surgery)
+                                degree from the University of Lagos, College of Medicine. She is a recipient of several health tech awards
+                                and has co-authored several digital health publications seen in journals both locally and internationally.
+                                An aspiring digital health leader, Adaorah hopes to use health research and innovation in engineering solutions
+                                that improves patient experience and bridges the inequity in healthcare delivery in rural areas of Africa.
+                                She enjoys movies, indie pop music and good food.
+                            </p>
                             <!-- Social Buttons -->
                             <div class="gla_footer_social">
-                                <a href="#"><i class="ti ti-facebook gla_icon_box"></i></a>
-                                <a href="#"><i class="ti ti-instagram gla_icon_box"></i></a>
-                                <a href="#"><i class="ti ti-google gla_icon_box"></i></a>
+                                <a href="https://www.linkedin.com/in/adaorah-momodu/"><i class="ti ti-linkedin gla_icon_box"></i></a>
+                                <a href="https://www.instagram.com/adaorahmomodu/"><i class="ti ti-instagram gla_icon_box"></i></a>
+<!--                                <a href="#"><i class="ti ti-google gla_icon_box"></i></a>-->
                             </div>
                         </div>
                         
