temp modification to registry

--- a/src/main/resources/templates/registry.html
+++ b/src/main/resources/templates/registry.html
@@ -25,6 +25,10 @@
     <link rel="stylesheet" th:href="@{/registry/css/font-awesome.min.css}">
     <link rel="stylesheet" th:href="@{/registry/style.css}">
     <link rel="stylesheet" th:href="@{/registry/css/responsive.css}">
+
+
+    <!-- Theme CSS -->
+    <link th:href="@{/css/glanz_style.css}" rel="stylesheet">
 </head>
 
 <body class="dark-theme" data-offset="50" data-spy="scroll" data-target=".navbar">
@@ -431,6 +435,10 @@
 <script th:src="@{/registry/js/contact.js}"></script>
 <script th:src="@{/registry/js/plugins.js}"></script>
 <script th:src="@{/registry/js/main.js}"></script>
+
+<!-- Theme JS -->
+<script th:src="@{/js/glanz_script.js}"></script>
+
 </body>
 
 </html>
