invert fix on paystack page

--- a/src/main/resources/templates/paystack_checkout.html
+++ b/src/main/resources/templates/paystack_checkout.html
@@ -53,7 +53,7 @@
             <div class="container">
 
                 <div class="gla_logo_container clearfix">
-                    <img th:src="@{/img/AE-test-3.png}" alt="" class="gla_logo_rev">
+                    <img th:src="@{/img/AE-test-3.png}" alt="" class="">
 <!--                    <div class="gla_logo_txt">-->
 <!--                        &lt;!&ndash; Logo &ndash;&gt;-->
 <!--                        <a href="/" class="gla_logo">Adaorah & Emeodi</a>-->
