emeodi's bio added

--- a/src/main/resources/templates/wedding.html
+++ b/src/main/resources/templates/wedding.html
@@ -209,7 +209,7 @@
                         <div class="gla_simple_block">
                             <h2>Adaorah Francisca</h2>
                             <p style="text-align: justify; text-justify: inter-word;">
-                                Adaorah Momodu is a digital health specialist and an early career medical researcher.
+                                Adaorah is a digital health specialist and an early career medical researcher.
                                 She is Co-founder and COO at Oncopadi Technologies Limited. She holds a MBBS (Bachelor of Medicine; Bachelor of Surgery)
                                 degree from the University of Lagos, College of Medicine. She is a recipient of several health tech awards
                                 and has co-authored several digital health publications seen in journals both locally and internationally.
@@ -232,12 +232,20 @@
                     <div class="col-md-6 col-md-push-6 gla_image_bck" data-color="#eee">
                         <div class="gla_simple_block">
                             <h2>Emeodi Mikel</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio mollitia, ipsa accusamus eius. Aspernatur ab sed minima, doloremque eligendi voluptatibus repellat unde, facilis natus ex ipsum eius atque suscipit fugit.</p>
+                            <p style="text-align: justify; text-justify: inter-word;">
+                                Emeodi is a serial entrepreneur and IT specialist with interests in operational and systems management.
+                                He is the CEO and Director at Genuss Investment Limited.
+                                He holds a Master Degree in Commercial Project Management from the University of Manchester,
+                                United Kingdom and a Bachelor degree in Business Information Systems from the University of Bolton UK.
+                                Emeodi is passionate about providing affordable, secured and powerful tools to support educators
+                                in our communities in creating inclusive online environments that helps every student
+                                to learn anywhere in Nigeria. He is an avid Arsenal Fan. He enjoys Formula-1, Reading and African cuisines.
+                            </p>
                             <!-- Social Buttons -->
                             <div class="gla_footer_social">
-                                <a href="#"><i class="ti ti-facebook gla_icon_box"></i></a>
-                                <a href="#"><i class="ti ti-instagram gla_icon_box"></i></a>
-                                <a href="#"><i class="ti ti-google gla_icon_box"></i></a>
+                                <a href="https://web.facebook.com/emeodi"><i class="ti ti-facebook gla_icon_box"></i></a>
+<!--                                <a href="#"><i class="ti ti-instagram gla_icon_box"></i></a>-->
+<!--                                <a href="#"><i class="ti ti-google gla_icon_box"></i></a>-->
                             </div>
                         </div>
                         
