--- a/src/main/resources/templates/wedding.html
+++ b/src/main/resources/templates/wedding.html
@@ -233,13 +233,23 @@
                         <div class="gla_simple_block">
                             <h2>Emeodi Mikel</h2>
                             <p style="text-align: justify; text-justify: inter-word;">
-                                Emeodi is a serial entrepreneur and IT specialist with interests in operational and systems management.
-                                He is the CEO and Director at Genuss Investment Limited.
-                                He holds a Master Degree in Commercial Project Management from the University of Manchester,
-                                United Kingdom and a Bachelor degree in Business Information Systems from the University of Bolton UK.
-                                Emeodi is passionate about providing affordable, secured and powerful tools to support educators
-                                in our communities in creating inclusive online environments that helps every student
-                                to learn anywhere in Nigeria. He is an avid Arsenal Fan. He enjoys Formula-1, Reading and African cuisines.
+<!--                                Emeodi is a serial entrepreneur and IT specialist with interests in operational and systems management.-->
+<!--                                He is the CEO and Director at Genuss Investment Limited.-->
+<!--                                He holds a Master Degree in Commercial Project Management from the University of Manchester,-->
+<!--                                United Kingdom and a Bachelor degree in Business Information Systems from the University of Bolton UK.-->
+<!--                                Emeodi is passionate about providing affordable, secured and powerful tools to support educators-->
+<!--                                in our communities in creating inclusive online environments that helps every student-->
+<!--                                to learn anywhere in Nigeria. He is an avid Arsenal Fan. He enjoys Formula-1, Reading and African cuisines.-->
+
+
+                                Emeodi is a tech entrepreneur and IT specialist with interests in operational and systems management.
+                                He takes keen enthusiasm in business development with a particular interest in organisational and process improvement.
+                                He is the Managing Director at Genuss Investment Limited. He holds a Master's Degree in Commercial Project Management from
+                                The University of Manchester UK and a Bachelor's degree in Business Information Systems from The University of Bolton.
+                                Emeodi is passionate about providing affordable, secured and powerful tools to support educators in our communities in
+                                creating inclusive online environments that helps every student to learn anywhere in Nigeria.
+                                He is an avid Arsenal Fan. He enjoys Formula one, reading and movies.
+
                             </p>
                             <!-- Social Buttons -->
                             <div class="gla_footer_social">
