our story coming soon

--- a/src/main/resources/templates/wedding.html
+++ b/src/main/resources/templates/wedding.html
@@ -184,11 +184,20 @@
             <div class="container text-center">
                 
                 <h2>Our Story</h2>
-                <h3 class="gla_subtitle">The Fourth of July</h3>
+                <h3 class="gla_subtitle">
+<!--                    The Fourth of July-->
+                    ****
+                </h3>
                 
                 
 
-                <p>My fiancé proposed on the Fourth of July. My mother asked us to go to the backyard to get some chairs and he took me by the shed where we could see all of the fireworks. He kissed me, then he took the ring box out of his pocket and asked me to be his wife. He was shaking a little. The proposal was a little silly but perfect, just like him." — Jeska Cords</p>
+                <p>
+<!--                    My fiancé proposed on the Fourth of July. My mother asked us to go to the backyard to get some -->
+<!--                    chairs and he took me by the shed where we could see all of the fireworks. He kissed me, then he -->
+<!--                    took the ring box out of his pocket and asked me to be his wife. He was shaking a little. -->
+<!--                    The proposal was a little silly but perfect, just like him." — Jeska Cords-->
+                    **** COMING SOON !!! ****
+                </p>
 
                
                 
